# lab4_b

./: CMakeLists.txt  Untitled.mdj  clutch_table.cpp  clutch_table.hpp  excursion.cpp  excursion.hpp  interface.cpp  interface.hpp  main.cpp  mylist.hpp  mynnotepad.txt  test.cpp
